# sedona-spatialbench

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  requirements-docs.txt  spatialbench-config.yml
.github/workflows/: benchmark.yml  build-py-packages.yml  packaging.yml  pre-commit.yml  spatialbench-cli-publish-pypi.yml  spatialbench-publish-crates.yml
benchmark/: run_benchmark.py  summarize_results.py
contributors-guide/: index.html
datasets-generators/: index.html
dev/release/: README.md  check-rat-report.py  run-rat.sh  sign-assets.sh  upload-candidate.sh  upload-release.sh  verify-release-candidate.sh
docs/: contributors-guide.md  index.md  queries.md  requirements.txt  single-node-benchmarks.md  spatialbench-distributions.md
docs/javascripts/: katex.js
overview-methodology/: index.html
queries/: index.html
quickstart/: index.html
raster/: generator.py
search/: search_index.json
single-node-benchmarks/: index.html
spatialbench-arrow/: Cargo.toml  README.md
spatialbench-cli/: Cargo.toml  README.md
spatialbench-cli/src/: generate.rs  main.rs  output_plan.rs  parquet.rs  plan.rs  runner.rs  s3_writer.rs
spatialbench-cli/tests/: cli_integration.rs
spatialbench-distributions/: index.html
spatialbench-queries/: print_queries.py  spatial_polars.py
spatialbench/data/: README.md
