[package]
name = "spatialbench-arrow"
version = "1.1.1"
edition = "2024"
authors = ["clflushopt", "alamb"]
description = "TPC-H data generator into Apache Arrow format"
repository = "https://github.com/wherobots/sedona-spatialbench"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
arrow = { version = "56", default-features = false, features = ["prettyprint"] }
spatialbench = { path = "../spatialbench", version = "1.1.1" }
geo = { workspace = true }
geozero = { workspace = true }

[dev-dependencies]
arrow-csv = "56"
chrono = "0.4.39"
